# Hitachi-spoofer

./: .gitignore  CMakeLists.txt  README.md
Main/: HWID Spoofer.slnx
Main/Main/: HWID Spoofer.cpp  HWID Spoofer.vcxproj  HWID Spoofer.vcxproj.filters  driver.h  logger.h  security_utils.h  version.h
Main/Main/Source/Core/: ErrorCode.h  Exception.h  Types.h
Main/Main/Source/Driver/: DriverIOControl.h  DriverManager.cpp  DriverManager.h
Main/Main/Source/Spoofing/: BackupManager.cpp  BackupManager.h  ConfigManager.cpp  ConfigManager.h  DeepCleaner.cpp  DeepCleaner.h  HWIDPresets.cpp  HWIDPresets.h  IdentityManager.cpp  IdentityManager.h  Spoofer.cpp  Spoofer.h
Main/Main/Source/UI/: Components.cpp  Components.h  UIManager.cpp  UIManager.h  UIStyles.cpp  UIStyles.h
Main/Main/Source/Utils/: AsyncWorker.cpp  AsyncWorker.h  CacheManager.cpp  CacheManager.h  FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  StringUtils.cpp  StringUtils.h  SystemUtils.cpp  SystemUtils.h
docs/: ARCHITECTURE.md  BUILD.md  CODE_STANDARDS.md
include/: config.h
include/core/: exception.h  hwid_generator.h
include/utils/: logger.h  singleton.h
src/: main.cpp
src/core/: hwid_generator.cpp  hwid_generator.h  spoofing_engine.cpp  spoofing_engine.h
src/driver/: driver.h  driver_interface.cpp  driver_interface.h
src/ui/: ui_manager.cpp  ui_manager.h
src/utils/: logger.cpp  logger.h  security_utils.h  version.h
